@@ -38,6 +38,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.sptribs.document.model.CaseDocumentType.HEARING_RECORD;
@@ -238,7 +239,7 @@ class CaseworkerEditHearingSummaryTest {
         caseWorkerEditHearingSummary.aboutToSubmit(updatedCaseDetails, beforeDetails);
 
         verify(documentsService).updateDocumentCategories(argThat(documents -> documents.size() == 1
-            && documents.get(0).getValue().getDocumentCategory() == DocumentType.HOSPITAL_RECORDS));
+            && documents.getFirst().getValue().getDocumentCategory() == DocumentType.HOSPITAL_RECORDS));
     }
 
     @Test
@@ -268,6 +269,50 @@ class CaseworkerEditHearingSummaryTest {
 
         assertThat(response.getErrors()).isEmpty();
         verify(documentsService).saveDocuments(any(), eq(List.of()), eq(HEARING_RECORD));
+    }
+
+    @Test
+    void shouldRemoveExistingRecordingWhenUploadCollectionIsExplicitlyCleared() {
+        final Document recording = Document.builder()
+            .url("recording-url")
+            .binaryUrl("recording-binary-url")
+            .filename("recording.mp3")
+            .build();
+        final Listing existingListing = getRecordListing();
+        existingListing.setSummary(HearingSummary.builder().recFile(List.of(ListValue.<CaseworkerCICDocument>builder()
+            .id("recording-id")
+            .value(CaseworkerCICDocument.builder()
+                .documentLink(recording)
+                .documentCategory(DocumentType.LINKED_DOCS)
+                .build())
+            .build())).build());
+        final CaseDetails<CaseData, State> beforeDetails = new CaseDetails<>();
+        beforeDetails.setData(CaseData.builder()
+            .hearingList(List.of(ListValue.<Listing>builder().value(existingListing).build()))
+            .build());
+
+        final CaseData updatedCaseData = CaseData.builder()
+            .cicCase(CicCase.builder()
+                .hearingSummaryList(DynamicList.builder()
+                    .value(DynamicListElement.builder().label("1 - Final - 21 Apr 2023 10:00").build())
+                    .build())
+                .build())
+            .listing(getRecordListing())
+            .build();
+        updatedCaseData.getListing().setSummary(HearingSummary.builder()
+            .recFileUpload(List.of())
+            .build());
+
+        final CaseDetails<CaseData, State> updatedCaseDetails = new CaseDetails<>();
+        updatedCaseDetails.setData(updatedCaseData);
+        when(judicialService.populateJudicialId(any())).thenReturn("personal_code");
+
+        caseWorkerEditHearingSummary.aboutToSubmit(updatedCaseDetails, beforeDetails);
+
+        verify(documentsService).removeDocuments(argThat(documents -> documents.size() == 1
+            && "recording-binary-url".equals(documents.getFirst().getValue().getDocumentLink().getBinaryUrl())));
+        verify(documentsService).saveDocuments(any(), eq(List.of()), eq(HEARING_RECORD));
+        verify(documentsService, never()).updateDocumentCategories(argThat(documents -> !documents.isEmpty()));
     }
 
     @Test
